# TemplateGUI

inspector/: CMakeLists.txt  accesscontroloptionpanel.cpp  accesscontroloptionpanel.h  accesscontrolpreferenceswidget.cpp  accesscontrolpreferenceswidget.h  alarmdatabase.cpp  alarmdatabase.h  alarmwidget.cpp  alarmwidget.h  backgroundwidget.cpp  backgroundwidget.h  crashhandler.cpp  crashhandler.h  firstlevelnavigationwidget.cpp  firstlevelnavigationwidget.h  icon.icns  inspector.de.ts  inspector.en.ts  inspector.es.ts  inspector.fr.ts  inspector.hr.ts  inspector.qrc  inspectordefines.h  inspectorpreferenceswidget.cpp  inspectorpreferenceswidget.h  interfaces.h  loginpopupdialog.cpp  loginpopupdialog.h  machinestatepopupdialog.cpp  machinestatepopupdialog.h  machinestatewidget.cpp  machinestatewidget.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  messagespopupdialog.cpp  messagespopupdialog.h  pluginlistmodel.cpp  (+26 more)
plugins/logger/: logger.de.ts  logger.en.ts  logger.es.ts  logger.fr.ts  logger.hr.ts
plugins/pnio-pndriver/: CMakeLists.txt  pnio.de.ts  pnio.en.ts  pnio.es.ts  pnio.fr.ts  pnio.hr.ts  pniobitstatewidget.cpp  pniobitstatewidget.h  pniocontroller.cpp  pniocontroller.h  pniodevice.cpp  pniodevice.h  pniointerface.cpp  pniointerface.h  pnioplugin.cpp  pnioplugin.h  pniorecordwidget.cpp  pniorecordwidget.h  pniostatewidget.cpp  pniostatewidget.h  pniotextwidget.cpp  pniotextwidget.h  pniowidget.cpp  pniowidget.h
plugins/timerecording/: BPNSerialPort.cpp  BPNSerialPort.h  CMakeLists.txt  DoorAccessControl.cpp  DoorAccessControl.h  ETRSConfigWidget.cpp  ETRSConfigWidget.h  ETRSDeviceWidget.cpp  ETRSDeviceWidget.h  EmployeeList.cpp  EmployeeList.h  ErpClient.cpp  ErpClient.h  JobDescriptionWidget.cpp  JobDescriptionWidget.h  PNDriverConfiguration.xml  accesscontrolsystem.cpp  accesscontrolsystem.h  devicemanagement.cpp  devicemanagement.h  devicepopupdialog.cpp  devicepopupdialog.h  employee.cpp  employee.h  etrs.qrc  etrsdefines.h  etrsplugin.cpp  etrsplugin.h  etrswidget.cpp  etrswidget.h  projectWidget.cpp  projectWidget.h  timerecordingsystem.cpp  timerecordingsystem.h  workListItem.cpp  workListItem.h
